--- a/.github/workflows/repo-health.yml
+++ b/.github/workflows/repo-health.yml
@@ -16,7 +16,7 @@ jobs:
           # Fichiers obligatoires
           required_files=("README.md" "version.txt")
           # Dossiers obligatoires
-          required_dirs=("infra" "apps" ".env")
+          required_dirs=("infra" "apps" ".env" "docs")
 
           missing=0
 
