--- a/.github/workflows/repo-health.yml
+++ b/.github/workflows/repo-health.yml
@@ -14,7 +14,7 @@ jobs:
         shell: bash
         run: |
           # Fichiers obligatoires
-          required_files=("README.md" "version.txt")
+          required_files=("README.md" "version.txt" "mkdocs.yml")
           # Dossiers obligatoires
           required_dirs=("infra" "apps" ".env" "docs")
 
